--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -873,7 +873,7 @@ cusdis:
 # Based on GitHub Discussions, similar to Utterances
 # See: https://giscus.app/
 giscus:
-  repo: howie-wu/blogtalk-giscus
+  repo: how1ewu/blogtalk-giscus
   repo-id: R_kgDOIBGxtw
   category: General
   category-id: DIC_kwDOIBGxt84CRfo_
