--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -463,7 +463,7 @@ footer:
 index:
   # 首页 Banner 头图，可以是相对路径或绝对路径，以下相同
   # Path of Banner image, can be a relative path or an absolute path, the same on other pages
-  banner_img: https://image.aiwush.com/bg.jpg
+  banner_img: https://img.wush.cc/bg.jpg
 
   # 头图高度，屏幕百分比
   # Height ratio of banner image
@@ -535,7 +535,7 @@ index:
 # Post Page
 #---------------------------
 post:
-  banner_img: https://image.aiwush.com/bg.jpg
+  banner_img: https://img.wush.cc/bg.jpg
   banner_img_height: 70
   banner_mask_alpha: 0.3
 
@@ -890,7 +890,7 @@ giscus:
 # Archive Page
 #---------------------------
 archive:
-  banner_img: https://image.aiwush.com/bg.jpg
+  banner_img: https://img.wush.cc/bg.jpg
   banner_img_height: 60
   banner_mask_alpha: 0.3
 
@@ -901,7 +901,7 @@ archive:
 #---------------------------
 category:
   enable: true
-  banner_img: https://image.aiwush.com/bg.jpg
+  banner_img: https://img.wush.cc/bg.jpg
   banner_img_height: 60
   banner_mask_alpha: 0.3
 
@@ -930,7 +930,7 @@ category:
 #---------------------------
 tag:
   enable: true
-  banner_img: https://image.aiwush.com/bg.jpg
+  banner_img: https://img.wush.cc/bg.jpg
   banner_img_height: 80
   banner_mask_alpha: 0.3
   tagcloud:
@@ -947,10 +947,10 @@ tag:
 #---------------------------
 about:
   enable: true
-  banner_img: https://image.aiwush.com/bg.jpg
+  banner_img: https://img.wush.cc/bg.jpg
   banner_img_height: 60
   banner_mask_alpha: 0.3
-  avatar: https://image.aiwush.com/image/202291815isarFMlx7BAtZdw.jpg
+  avatar: https://img.wush.cc/image/202291815isarFMlx7BAtZdw.jpg
   name: "Howie Wu"
   intro: "这是一个用于记录Howie学习的小站，这个站很小,里面记录了一个菜鸟程序员（or算法工程师？）的成长历程。加油！"
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
@@ -967,7 +967,7 @@ about:
 # Custom Page through `hexo new page`
 #---------------------------
 page:
-  banner_img: https://image.aiwush.com/bg.jpg
+  banner_img: https://img.wush.cc/bg.jpg
   banner_img_height: 60
   banner_mask_alpha: 0.3
 
@@ -978,7 +978,7 @@ page:
 #---------------------------
 page404:
   enable: true
-  banner_img: https://image.aiwush.com/bg.jpg
+  banner_img: https://img.wush.cc/bg.jpg
   banner_img_height: 85
   banner_mask_alpha: 0.3
   # 重定向到首页的延迟(毫秒)
@@ -1018,7 +1018,7 @@ links:
   # Custom content at the bottom of the links
   custom:
     enable: true
-    content: '<hr><p>在下方留言申请加入我的友链，按如下格式提供信息：</p><ul><li>博客名：Howie部落阁</li><li>简介：Howie的个人小站</li><li>链接：https://www.aiwush.com</li><li>图片：/img/favicon.png</li></ul>'
+    content: '<hr><p>在下方留言申请加入我的友链，按如下格式提供信息：</p><ul><li>博客名：Howie部落阁</li><li>简介：Howie的个人小站</li><li>链接：https://www.wush.cc</li><li>图片：/img/favicon.png</li></ul>'
 
   # 评论插件
   # Comment plugin
