--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -1010,6 +1010,12 @@ links:
       link: "https://github.com/fluid-dev/hexo-theme-fluid",
       avatar: "https://s2.loli.net/2022/04/22/XUAgcvsqOJhkin9.png"
     }
+    - {
+      title: "Xyfuture's Blog",
+      intro: "Xyfuture的博客",
+      link: "https://xyfuture.github.io/",
+      avatar: "https://s2.loli.net/2022/11/29/fXiyB7kRuDhdznc.jpg"
+    }
   # 当成员头像加载失败时，替换为指定图片
   # When the member avatar fails to load, replace the specified image
   onerror_avatar: /img/avatar.png
