--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -249,7 +249,7 @@ web_analytics:  # 网页访问统计
   # 百度统计的 Key，值需要获取下方链接中 `hm.js?` 后边的字符串
   # Baidu analytics, get the string behind `hm.js?`
   # See: https://tongji.baidu.com/sc-web/10000033910/home/site/getjs?siteId=13751376
-  baidu: c43e659d2ddfe58c6804d3962a94508e
+  baidu: 0787b099bb06f2a33b0a5680ea8c52c5
 
   # Google 统计的 Tracking ID
   # Google analytics, set Tracking ID
@@ -281,8 +281,8 @@ web_analytics:  # 网页访问统计
   # LeanCloud 计数统计，可用于 PV UV 展示，如果 `web_analytics: enable` 没有开启，PV UV 展示只会查询不会增加
   # LeanCloud count statistics, which can be used for PV UV display. If `web_analytics: enable` is false, PV UV display will only query and not increase
   leancloud:
-    app_id:
-    app_key:
+    app_id: Dk0avHaeE4f7azMpcejLo3fv-MdYXbMMI
+    app_key: XOpl2s7l90YbfBwztdcZmdZs
     # REST API 服务器地址，国际版不填
     # Only the Chinese mainland users need to set
     server_url:
@@ -426,6 +426,7 @@ footer:
     <i class="iconfont icon-love"></i>
     <a href="https://github.com/fluid-dev/hexo-theme-fluid" target="_blank" rel="nofollow noopener"><span>Fluid</span></a>
     <div style="font-size: 0.85rem">
+
       <span id="timeDate">载入天数...</span>
       <span id="times">载入时分秒...</span>
       <script src="/js/duration.js"></script>
@@ -440,7 +441,7 @@ footer:
     # 统计数据来源，使用 leancloud 需要设置 `web_analytics: leancloud` 中的参数；使用 busuanzi 不需要额外设置，但是有时不稳定，另外本地运行时 busuanzi 显示统计数据很大属于正常现象，部署后会正常
     # Data source. If use leancloud, you need to set the parameter in `web_analytics: leancloud`
     # Options: busuanzi | leancloud
-    source: "busuanzi"
+    source: "leancloud"
 
   # 国内大陆服务器的备案信息
   # For Chinese mainland website policy, other areas keep disable
