--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -137,25 +137,25 @@ dark_mode:
 color:
   # body 背景色
   # Color of body background
-  body_bg_color: "#eee"
+  body_bg_color: "#ffffff"
   # 暗色模式下的 body 背景色，下同
   # Color in dark mode, the same below
-  body_bg_color_dark: "#181c27"
+  body_bg_color_dark: "#383940"
 
   # 顶部菜单背景色
   # Color of navigation bar background
-  navbar_bg_color: "#28446c"
-  navbar_bg_color_dark: "#252d38"
+  navbar_bg_color: "#ffffff"
+  navbar_bg_color_dark: "#383940"
 
   # 顶部菜单字体色
   # Color of navigation bar text
-  navbar_text_color: "#fff"
-  navbar_text_color_dark: "#d0d0d0"
+  navbar_text_color: "#484853"
+  navbar_text_color_dark: "#bebec6"
 
   # 副标题字体色
   # Color of navigation bar text
-  subtitle_color: "#fff"
-  subtitle_color_dark: "#d0d0d0"
+  subtitle_color: "#484853"
+  subtitle_color_dark: "#bebec6"
 
   # 全局字体色
   # Color of global text
