--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -144,7 +144,7 @@ color:
 
   # 顶部菜单背景色
   # Color of navigation bar background
-  navbar_bg_color: "#81c995"
+  navbar_bg_color: "#534799"
   navbar_bg_color_dark: "#252d38"
 
   # 顶部菜单字体色
@@ -458,7 +458,7 @@ footer:
 index:
   # 首页 Banner 头图，可以是相对路径或绝对路径，以下相同
   # Path of Banner image, can be a relative path or an absolute path, the same on other pages
-  banner_img: https://s2.loli.net/2022/12/29/LOBE7gP9ZU54DKr.jpg
+  banner_img: https://s2.loli.net/2023/01/05/pz9dHfPKJ3wOGLi.jpg
 
   # 头图高度，屏幕百分比
   # Height ratio of banner image
@@ -530,7 +530,7 @@ index:
 # Post Page
 #---------------------------
 post:
-  banner_img: https://s2.loli.net/2022/12/29/LOBE7gP9ZU54DKr.jpg
+  banner_img: https://s2.loli.net/2023/01/05/pz9dHfPKJ3wOGLi.jpg
   banner_img_height: 70
   banner_mask_alpha: 0.3
 
@@ -885,7 +885,7 @@ giscus:
 # Archive Page
 #---------------------------
 archive:
-  banner_img: https://s2.loli.net/2022/12/29/LOBE7gP9ZU54DKr.jpg
+  banner_img: https://s2.loli.net/2023/01/05/pz9dHfPKJ3wOGLi.jpg
   banner_img_height: 60
   banner_mask_alpha: 0.3
 
@@ -896,7 +896,7 @@ archive:
 #---------------------------
 category:
   enable: true
-  banner_img: https://s2.loli.net/2022/12/29/LOBE7gP9ZU54DKr.jpg
+  banner_img: https://s2.loli.net/2023/01/05/pz9dHfPKJ3wOGLi.jpg
   banner_img_height: 60
   banner_mask_alpha: 0.3
 
@@ -925,7 +925,7 @@ category:
 #---------------------------
 tag:
   enable: true
-  banner_img: https://s2.loli.net/2022/12/29/LOBE7gP9ZU54DKr.jpg
+  banner_img: https://s2.loli.net/2023/01/05/pz9dHfPKJ3wOGLi.jpg
   banner_img_height: 80
   banner_mask_alpha: 0.3
   tagcloud:
@@ -942,7 +942,7 @@ tag:
 #---------------------------
 about:
   enable: true
-  banner_img: https://s2.loli.net/2022/12/29/LOBE7gP9ZU54DKr.jpg
+  banner_img: https://s2.loli.net/2023/01/05/pz9dHfPKJ3wOGLi.jpg
   banner_img_height: 60
   banner_mask_alpha: 0.3
   avatar: https://s2.loli.net/2022/12/29/PoAilmtkDWYICzR.jpg
@@ -962,7 +962,7 @@ about:
 # Custom Page through `hexo new page`
 #---------------------------
 page:
-  banner_img: https://s2.loli.net/2022/12/29/LOBE7gP9ZU54DKr.jpg
+  banner_img: https://s2.loli.net/2023/01/05/pz9dHfPKJ3wOGLi.jpg
   banner_img_height: 60
   banner_mask_alpha: 0.3
 
@@ -973,7 +973,7 @@ page:
 #---------------------------
 page404:
   enable: true
-  banner_img: https://s2.loli.net/2022/12/29/LOBE7gP9ZU54DKr.jpg
+  banner_img: https://s2.loli.net/2023/01/05/pz9dHfPKJ3wOGLi.jpg
   banner_img_height: 85
   banner_mask_alpha: 0.3
   # 重定向到首页的延迟(毫秒)
@@ -987,7 +987,7 @@ page404:
 #---------------------------
 links:
   enable: true
-  banner_img: https://s2.loli.net/2022/12/29/LOBE7gP9ZU54DKr.jpg
+  banner_img: https://s2.loli.net/2023/01/05/pz9dHfPKJ3wOGLi.jpg
   banner_img_height: 60
   banner_mask_alpha: 0.3
   # 友链的成员项
