--- a/_config.yml
+++ b/_config.yml
@@ -95,6 +95,10 @@ include:
 exclude:
 ignore:
 
+# sitemap
+sitemap:
+path: sitemap.xml
+
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
