--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -882,7 +882,9 @@ giscus:
   emit-metadata: 0
   input-position: top
   lang: zh-CN
+  loading: lazy
   data-lang: zh-CN
+  data-loading: lazy
 
 #---------------------------
 # 归档页
