--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -1025,7 +1025,7 @@ links:
   # Custom content at the bottom of the links
   custom:
     enable: true
-    content: '<hr><p>在下方留言申请加入我的友链，按如下格式提供信息：</p><ul><li>博客名：Howie部落阁</li><li>简介：Howie的个人小站</li><li>链接：https://www.how1e.com</li><li>图片：/img/favicon.png</li></ul>'
+    content: '<hr><p>在下方留言申请加入我的友链，按如下格式提供信息：</p><ul><li>博客名：Howie部落阁</li><li>简介：Howie的个人小站</li><li>链接：https://www.wush.cc</li><li>图片：/img/favicon.png</li></ul>'
 
   # 评论插件
   # Comment plugin
