--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -726,9 +726,9 @@ post:
   # Comment plugin
   comments:
     # 正常用
-    enable: true
+    # enable: true
     # 备案用
-    # enable: false
+    enable: false
     # 指定的插件，需要同时设置对应插件的必要参数
     # The specified plugin needs to set the necessary parameters at the same time
     # Options: utterances | disqus | gitalk | valine | waline | changyan | livere | remark42 | twikoo | cusdis | giscus
