--- a/_config.yml
+++ b/_config.yml
@@ -127,7 +127,8 @@ neat_js:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: fluid
+# theme: fluid
+theme: stellar
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
