--- a/_config.yml
+++ b/_config.yml
@@ -127,9 +127,9 @@ neat_js:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-# theme: fluid
+theme: fluid
 # theme: stellar
-theme: cactus
+# theme: cactus
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
