--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://www.wush.cc
+url: https://www.wsh.best
 permalink: :title/
 permalink_defaults:
 pretty_urls:
