--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "6.3.0"
+    "version": "7.0.0-rc1"
   },
   "dependencies": {
-    "hexo": "^6.3.0",
+    "hexo": "^7.0.0-rc2",
     "hexo-auto-category": "^0.2.2",
     "hexo-baidu-url-submit": "^0.0.6",
     "hexo-deployer-git": "^4.0.0",
