--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -959,7 +959,7 @@ about:
   banner_img: https://s2.loli.net/2023/04/08/sKTVDte69w5PzpE.jpg
   banner_img_height: 60
   banner_mask_alpha: 0.3
-  avatar: https://s2.loli.net/2022/12/29/PoAilmtkDWYICzR.jpg
+  avatar: https://img.wush.cc/202381318%E5%8D%A1%E9%80%9A%E5%BD%A2%E8%B1%A1%E7%85%A7.png
   name: "Howie Wu"
   intro: "这是一个用于记录Howie学习的小站，这个站很小,里面记录了一个菜鸟程序员（or算法工程师？）的成长历程。加油！"
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
@@ -1035,7 +1035,7 @@ links:
   # Custom content at the bottom of the links
   custom:
     enable: true
-    content: '<hr><p>在下方留言申请加入我的友链，按如下格式提供信息：</p><ul><li>博客名：Howie部落阁</li><li>简介：Howie的个人小站</li><li>链接：https://www.wush.cc</li><li>图片：/img/favicon.png</li></ul>'
+    content: '<hr><p>在下方留言申请加入我的友链，按如下格式提供信息：</p><ul><li>博客名：Howie部落阁</li><li>简介：Howie的个人小站</li><li>链接：https://www.iswsh.com</li><li>图片：/img/favicon.png</li></ul>'
 
   # 评论插件
   # Comment plugin
