--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: ''
 keywords:
 author: Howie Wu
 language: zh-CN
-timezone: ''
+timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
