--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -965,7 +965,7 @@ about:
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, The icon is no longer a link, but a hovering QR code
   icons:
-    - { class: "iconfont icon-github-fill", link: "https://github.com/howie-wu", tip: "GitHub" }
+    - { class: "iconfont icon-github-fill", link: "https://github.com/how1ewu", tip: "GitHub" }
   #  - { class: "iconfont icon-douban-fill", link: "https://douban.com", tip: "豆瓣" }
   #  - { class: "iconfont icon-wechat-fill", qrcode: "/img/favicon.png" }
 
