--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -462,7 +462,7 @@ footer:
 index:
   # 首页 Banner 头图，可以是相对路径或绝对路径，以下相同
   # Path of Banner image, can be a relative path or an absolute path, the same on other pages
-  banner_img: https://img.wush.cc/202309171603873.jpg
+  banner_img: https://img.wush.cc/202309171556714.png
 
   # 头图高度，屏幕百分比
   # Height ratio of banner image
@@ -534,7 +534,7 @@ index:
 # Post Page
 #---------------------------
 post:
-  banner_img: https://img.wush.cc/202309171603873.jpg
+  banner_img: https://img.wush.cc/202309171556714.png
   banner_img_height: 70
   banner_mask_alpha: 0.3
 
@@ -899,7 +899,7 @@ discuss:
 # Archive Page
 #---------------------------
 archive:
-  banner_img: https://img.wush.cc/202309171603873.jpg
+  banner_img: https://img.wush.cc/202309171556714.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
 
@@ -910,7 +910,7 @@ archive:
 #---------------------------
 category:
   enable: true
-  banner_img: https://img.wush.cc/202309171603873.jpg
+  banner_img: https://img.wush.cc/202309171556714.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
 
@@ -939,7 +939,7 @@ category:
 #---------------------------
 tag:
   enable: true
-  banner_img: https://img.wush.cc/202309171603873.jpg
+  banner_img: https://img.wush.cc/202309171556714.png
   banner_img_height: 80
   banner_mask_alpha: 0.3
   tagcloud:
@@ -956,7 +956,7 @@ tag:
 #---------------------------
 about:
   enable: true
-  banner_img: https://img.wush.cc/202309171603873.jpg
+  banner_img: https://img.wush.cc/202309171556714.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
   avatar: https://img.wush.cc/202309171523177.png
@@ -978,7 +978,7 @@ about:
 # Custom Page through `hexo new page`
 #---------------------------
 page:
-  banner_img: https://img.wush.cc/202309171603873.jpg
+  banner_img: https://img.wush.cc/202309171556714.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
 
@@ -989,7 +989,7 @@ page:
 #---------------------------
 page404:
   enable: true
-  banner_img: https://img.wush.cc/202309171603873.jpg
+  banner_img: https://img.wush.cc/202309171556714.png
   banner_img_height: 85
   banner_mask_alpha: 0.3
   # 重定向到首页的延迟(毫秒)
@@ -1003,7 +1003,7 @@ page404:
 #---------------------------
 links:
   enable: true
-  banner_img: https://img.wush.cc/202309171603873.jpg
+  banner_img: https://img.wush.cc/202309171556714.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
   # 友链的成员项
