--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -11,6 +11,7 @@
 #---------------------------
 
 #---------------------------
+
 # 全局
 # Global
 #---------------------------
@@ -147,7 +148,7 @@ color:
   # 顶部菜单背景色
   # Color of navigation bar background
   # navbar_bg_color: "#534799"
-  navbar_bg_color: "#180b46"
+  navbar_bg_color: "#6E9CC0"
   navbar_bg_color_dark: "#252d38"
 
   # 顶部菜单字体色
