--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -962,7 +962,7 @@ about:
   banner_mask_alpha: 0.3
   avatar: https://img.wush.cc/202309171523177.png
   name: "Howie Wu"
-  intro: "这是一个用于记录Howie学习的小站，这个站很小,里面记录了一个菜鸟程序员（or算法工程师？）的成长历程。加油！"
+  intro: "关了吧，没意思，这个站真的啥也没有，作者自己都不太想看，因为这只是个被当做备忘录和记录仪的伪·博客"
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, The icon is no longer a link, but a hovering QR code
   icons:
