--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hexo-generator-tag": "^2.0.0",
     "hexo-migrator-wordpress": "^2.1.2",
     "hexo-neat": "^1.0.9",
+    "hexo-related-popular-posts": "^5.0.1",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^6.1.1",
     "hexo-renderer-stylus": "^3.0.0",
