--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 # Site
-title: Howie的部落阁
+title: Howie's Blog
 subtitle: ''
 description: ''
 keywords:
