--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # Site
 title: Howie's Blog
 subtitle: ''
-description: ''
+description: '关了吧，没意思，这个站真的啥也没有，作者自己都不太想看，因为这只是个被当做备忘录和记录仪的伪·博客'
 keywords:
 author: Howie Wu
 language: 
