--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -197,17 +197,17 @@ footer:
   sitemap:
     '博客':
       - '[近期](/)'
-      - '[分类](/)'
-      - '[标签](/)'
-      - '[归档](/)'
+      - '[分类](/categories)'
+      # - '[标签](/)'
+      - '[归档](/archives)'
     # '项目':
     #   - '[开源库](/)'
     # '社交':
     #   - '[友链](/)'
     #   - '[留言板](/)'
     '更多':
-      - '[关于本站](/)'
-      - '[GitHub](/)'
+      - '[关于本站](/about)'
+      - '[GitHub](https://github.com/how1ewu)'
   content: | # 支持 Markdown 格式
     本站由 [@anonymity](/) 使用 [Stellar](https://github.com/xaoxuu/hexo-theme-stellar) 主题创建。
     本博客所有文章除特别声明外，均采用 [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/) 许可协议，转载请注明出处。
