--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hexo-auto-category": "^0.2.2",
     "hexo-baidu-url-submit": "^0.0.6",
     "hexo-deployer-git": "^4.0.0",
+    "hexo-filter-mermaid-diagrams": "^1.0.5",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-baidu-sitemap": "^0.1.9",
     "hexo-generator-category": "^2.0.0",
