--- a/_config.yml
+++ b/_config.yml
@@ -97,6 +97,19 @@ include:
 exclude:
 ignore:
 
+# AI摘要
+aiexcerpt:
+  default_enable: true
+  custom: true
+  api: https://api.iknowu.top/v1/chat/completions
+  token: sk-OjdILu4w4Yz3DrxIFb23Dc279c3b440c89Be47DbC9162311
+  model: 
+  prompt: '你是一个摘要生成工具，你需要解释我发送给你的内容，不要换行，不要超过200字，只需要介绍文章的内容，不需要提出建议和缺少的东西。请用中文回答，输出的内容开头为“ai: 这篇文章介绍了”'
+  ignoreEl: [
+    'table', 'pre', 'figure'
+  ]
+  max_token: 2000,
+
 # 自动生成sitemap
 sitemap:
   path: sitemap.xml
