--- a/.github/workflows/page.yml
+++ b/.github/workflows/page.yml
@@ -30,7 +30,7 @@ jobs:
           git pull --recurse-submodules
           git submodule update --remote
       - name: Push changes
-        uses: ad-m/github-push-action@main
+        uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Install Dependencies
