--- a/themes/stellar/_config.yml
+++ b/themes/stellar/_config.yml
@@ -1,6 +1,6 @@
 ######## Stellar info ########
 stellar:
-  version: '1.26.5'
+  version: '1.26.8'
   homepage: 'https://xaoxuu.com/wiki/stellar/'
   repo: 'https://github.com/xaoxuu/hexo-theme-stellar'
   main_css: /css/main.css
@@ -280,6 +280,11 @@ footer:
 
 ######## Tag Plugins ########
 tag_plugins:
+  # {% link %}
+  linkcard:
+    # 设置 api 可以自动提取网页标题、图标，服务部署方法：https://github.com/xaoxuu/site-info-api/
+    # 接口测试通过后，把按钮的 href 部分替换成 ${href} 之后填写到下方，例如：https://api.vlts.cc/site_info/v1?url=${href}
+    api: 
   # {% box %} / {% note %}
   note:
     default_color: '' # light, dark, red, orange, yellow, green, cyan, blue, purple, warning, error
@@ -488,10 +493,10 @@ style:
   prefix:
     h2: https://api.iconify.design/ci:heading-h2.svg
   border-radius:
-    card: 12px
-    block: 12px
-    bar: 8px
-    image: 6px
+    card-l: 16px # 侧边栏、文章横幅位置的圆角
+    card: 12px # 文章内大部分卡片的圆角
+    bar: 8px # 横条类元素的圆角
+    image: 12px # 图片圆角
   color:
     # 动态颜色（会根据明暗主题重设明度值，只用关心色相和饱和度即可）
     background: 'hsl(212 16% 98%)' # 浅色背景颜色
