--- a/source/_data/widgets.yml
+++ b/source/_data/widgets.yml
@@ -1,13 +1,6 @@
-memos:
-  layout: memos
+timeline:
+  layout: timeline
   title: 近期动态
   api: https://memos.wush.cc/api/v1/memo?creatorId=1&limit=10
   type: memos
   hide: user,footer
-toc:
-  layout: toc
-  list_number: false # 是否显示序号
-  min_depth: 2 # 建议不要低于 2 即从 H2 标签开始解析（H1标签用于文章大标题）
-  max_depth: 5 # 5 代表最多解析到 H5 标签
-  fallback: recent # Use a backup widget when toc does not exist.
-  collapse: false # true / false / auto (始终折叠/不折叠/自动折叠)
