--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -4,6 +4,15 @@ logo:
   title: '[{config.title}](/)' # you can set html tag like: '[<img no-lazy height="32px" src="xxx"/>](/)'
   subtitle: '欢迎访问 | Welcome!' # '文字1 | 文字2' (鼠标放上去会切换到文字2)
 
+######## Main ########
+# 站点主结构树
+site_tree:
+  # -- 列表类页面 -- #
+  # 主页配置
+  home:
+    leftbar: welcome, recent
+    rightbar: [timeline]
+
 ######## Article ########
 article:
   # 分享
