--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -12,6 +12,25 @@ site_tree:
   home:
     leftbar: welcome, recent
     rightbar: [timeline]
+  # -- 内容类页面 -- #
+  # 博客文章内页配置
+  post:
+    menu_id: post # 未在 front-matter 中指定 menu_id 时，layout 为 post 的页面默认使用这里配置的 menu_id
+    leftbar: related, recent # for pages using 'layout:post'
+    leftbar: related, recent, [timeline]
+    rightbar: ghrepo, toc
+  # 作者信息配置
+  author: 
+    base_dir: author # 只影响自动生成的页面路径
+    menu_id: post
+    leftbar: recent, [timeline]
+    rightbar: timeline
+  # 错误页配置
+  error_page:
+    menu_id: post
+    '404': '/404.html'
+    leftbar: recent, [timeline]
+    rightbar: timeline
 
 ######## Article ########
 article:
