--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -16,8 +16,7 @@ site_tree:
   # 博客文章内页配置
   post:
     menu_id: post # 未在 front-matter 中指定 menu_id 时，layout 为 post 的页面默认使用这里配置的 menu_id
-    leftbar: related, recent # for pages using 'layout:post'
-    leftbar: [related, recent, timeline]
+    leftbar: [related, recent, timeline] # for pages using 'layout:post'
     rightbar: ghrepo, toc
 
 ######## Article ########
