--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -18,6 +18,18 @@ site_tree:
     menu_id: post # 未在 front-matter 中指定 menu_id 时，layout 为 post 的页面默认使用这里配置的 menu_id
     leftbar: [related, recent, timeline] # for pages using 'layout:post'
     rightbar: ghrepo, toc
+  # 作者信息配置
+  author: 
+    base_dir: author # 只影响自动生成的页面路径
+    menu_id: post
+    leftbar: recent
+    rightbar: [timeline]
+  # 错误页配置
+  error_page:
+    menu_id: post
+    '404': '/404.html'
+    leftbar: recent
+    rightbar: [timeline]
 
 ######## Article ########
 article:
