--- a/source/_data/widgets.yml
+++ b/source/_data/widgets.yml
@@ -1,6 +1,6 @@
 timeline:
   layout: timeline
   title: 近期动态
-  api: https://memos.wush.cc/api/v1/memo?creatorId=1&limit=10
+  api: https://memos.iswsh.com/api/v1/memo?creatorId=1&limit=10
   type: memos
   hide: user,footer
