--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 # Site
-title: Howie's Blog
+title: Utopeadia
 subtitle: ''
-description: '关了吧，没意思，这个站真的啥也没有，作者自己都不太想看，因为这只是个被当做备忘录和记录仪的伪·博客'
+description: '理想国，梦想乡'
 keywords:
 author: Howie Wu
 language: 
