--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 # Site
-title: Utopeadia
+title: OwnUtopeadia
 subtitle: ''
 description: '理想国，梦想乡'
 keywords:
