--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -2,7 +2,7 @@
 logo:
   avatar: '[{config.avatar}](/about/)' # you can set avatar link in _config.yml or '[https://xxx.png](/about/)'
   title: '[{config.title}](/)' # you can set html tag like: '[<img no-lazy height="32px" src="xxx"/>](/)'
-  subtitle: '欢迎访问 | Welcome!' # '文字1 | 文字2' (鼠标放上去会切换到文字2)
+  subtitle: '理想国，梦想乡 | Utopia, Idea' # '文字1 | 文字2' (鼠标放上去会切换到文字2)
 
 ######## Main ########
 # 站点主结构树
